<resources>
    <string name="app_name">Final_ASM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profiles">Profiles setting</string>
    <string name="budget">Budget</string>
    <string name="home">Home</string>
    <string name="UserName">UserName</string>
    <string name="password">Password</string>
    <string name="new_registration">Doesn\'t have an account ? Register here</string>
    <string name="login">Login</string>
    <string name="or_login_with">.</string>
    <string name="welcome_back">CampusExpense</string>
    <string name="please_login_your_infomation">Please Login here</string>
</resources>